data/derived/comb/progs/unify/prog4503.ml.out
Characters 111-137:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
